# hazard

./: .autotools  .cproject  .gitignore  .project  AUTHORS  AUTHORS.md  CAPTURE-COMPARISON-2026-04-22.md  COPYING.md  ChangeLog  INSTALL.md  Makefile  Makefile.am  Makefile.in  NEWS  NEWS.md  README  README.md  ROOT-CAUSE-ANALYSIS.md  THANKS  THANKS.md  WINDOWS-VALIDATION-2026-04-27.md  aclocal.m4  bin.proj  cleanup.sh  confdefs.h  config.h  config.h.in  config.h.in~  config.status  config.sub  configure  configure.ac  configure.in  conftest  conftest.c  conftest.err  hazard-capture-provenance.txt  mkinstalldirs  pgm.asv  version-badge.json
docs/: Claude_CODEBASE_ANALYSIS.md  Claude_MODERNIZATION_GUIDE.md  Claude_R_MIGRATION_GUIDE.md  MULTI-PLATFORM-VALIDATION.md  Makefile  Makefile.am  Makefile.in  README  README.md  RELEASE-READINESS-KIT.md  VALIDATION_PLAN.md  documentation.html  downloads.html  examples.html  header.css  header.html  index.html  installation.html  introduction.html  macros.html  nav.css  navigate.html  style.css
docs/user_guides/: Makefile  Makefile.am  Makefile.in  hazard.doc  hazard.html  hazard.ps  hazpred.doc  hazpred.html  hazpred.ps  overview.doc  overview.html  overview.ps
docs/v5-design-input/: 2026-04-28-handoff-to-next-session.md  2026-04-28-silent-failure-postmortem.md
docs/validation-reports/: CAPTURE-COMPARISON-2026-04-22.md  ROOT-CAUSE-ANALYSIS.md  WINDOWS-VALIDATION-2026-04-24.md  WINDOWS-VALIDATION-2026-04-27.md
docs/vignettes/: README.md  downloads.md  examples.md  hazard.md  hazpred.md  installation.md  introduction.md  macros.md  overview.md  user_guides.md
examples/: Makefile  Makefile.am  Makefile.in  README  README-windows-baseline.md  ac.death.AVC.lst  avc.hp.death.AVC.ps  bs.death.AVC.lst  bs.death.AVC.sas  bs.death.AVC.summary.lst  bs.death.AVC.summary.sas  hm.deadp.VALVES.lst  hm.deadp.VALVES.sas  hm.death.AVC.deciles.lst  hm.death.AVC.deciles.sas  hm.death.AVC.lst  hm.death.AVC.sas  hm.death.patient.lst  hm.death.patient.sas  hmdeadp.sas7bdat  hmdeadp.xport  hp.death.AVC.hm1.lst  hp.death.AVC.hm2.lst  hp.death.AVC.hm2.sas  hp.death.AVC.lst  hp.death.AVC.sas  hp.death.COMPARISON.sas  hs.death.AVC.hm1.lst  hs.dthar.TGA.setup.sas  hz.deadp.KUL.lst  hz.deadp.KUL.sas  hz.death.AVC.lst  hz.death.AVC.sas  hz.te123.OMC.lst  hz.tm123.OMC.lst  hz.tm123.OMC.sas  lg.dead30d.AVC.lst  lg.dead30d.AVC.sas  lg.deadlate.AVC.lst  lg.deadlate.AVC.sas  (+3 more)
examples/data/: Makefile  Makefile.am  Makefile.in  avc  hsdtarxc.ssd01  hsdtarxp.ssd01  tga  valves
examples/output/: Makefile  Makefile.am  Makefile.in  ac.death.AVC  ac.death.AVC.lst  hm.deadp.VALVES  hm.deadp.VALVES.lst  hm.death.AVC  hm.death.AVC.lst  hp.death.AVC.hm1  hp.death.AVC.hm2.lst  hp.death.AVC.lst  hp.death.COMPARISON  hp.dthip.PAIVS.time.lst  hs.death.AVC.hm1  hs.dthar.TGA.hs1  hs.dthar.TGA.setup.lst  hz.deadp.KUL.lst  hz.death.AVC  hz.te123.OMC.lst  hz.tm123.OMC  hz.tm123.OMC.lst  lg.death.AVC
examples/sasest/: Makefile  Makefile.am  Makefile.in  bsavcc.sas7bdat  bsavcc.ssd01  bsavce.sas7bdat  bsavcl.sas7bdat  hmdeath.sas7bdat  hmdeath.ssd01  hmdthri1.ssd01  hmpdthe3.ssd01  hzdeath.sas7bdat  hzdeath.ssd01
macros/: Makefile  Makefile.am  Makefile.in  README  bootstrap.clusters.example.sas  bootstrap.clusters.sas  bootstrap.doc  bootstrap.hazard.sas  bootstrap.summary.example.sas  bootstrap.summary.sas  chisqgf.sas  deciles.hazard.sas  hazplot.sas  kaplan.sas  logit.sas  logitgr.sas  markov.lst  markov.sas  markov.test.lst  markov.test.sas  nelsonl.sas  nelsont.sas  plot.README  plot.sas
src/blackbox/: Makefile  Makefile.am  Makefile.in  README  blackbox  blackbox.c  data  hmdeadp.sas  hmdeadp.xport  hzpexmpl  hzpexmpl.c  ibmieee.c  ibmieee.h  test.data  xportHandler.c  xportHandler.h  xport_version.c  xport_version.h  xpt2ascii  xpt2ascii.c
src/common/: Makefile  Makefile.am  Makefile.in  common.h  dlgaob.c  dlgaob.h  errtext.c  errtext.h  hzd_Error.c  hzd_Error.h  hzd_early_p2t.c  hzd_early_p2t.h  hzd_early_t2p.c  hzd_early_t2p.h  hzd_error_describe.c  hzd_error_describe.h  hzd_error_marker.c  hzd_error_marker.h  hzd_exit_codes.h  hzd_init_Common.c  hzd_init_Common.h  hzd_late_p2t.c  hzd_late_p2t.h  hzd_late_t2p.c  hzd_late_t2p.h  hzd_ln_1min_e_negeX.c  hzd_ln_1min_e_negeX.h  hzd_ln_1min_enegX.c  hzd_ln_1min_enegX.h  hzd_ln_A_div_B.c  hzd_ln_A_div_B.h  hzd_ln_G1_and_SG1.c  hzd_ln_G1_and_SG1.h  hzd_ln_G1_and_SG1_m.c  hzd_ln_G1_and_SG1_m.h  hzd_ln_G3_and_SG3.c  hzd_ln_G3_and_SG3.h  hzd_ln_G3_and_SG3_m.c  hzd_ln_G3_and_SG3_m.h  hzd_ln_eBXmin1divB.c  (+108 more)
src/hazard/: Makefile  Makefile.am  Makefile.in  alocmem.c  alocmem.h  alocwrk.c  alocwrk.h  cmpmeth.c  cmpmeth.h  cntobs.c  cntobs.h  concrpt.c  concrpt.h  cput.c  cput.h  cput_d.c  cput_d.h  cput_dl.c  cput_dl.h  cput_l.c  cput_l.h  cput_v.c  cput_v.h  cput_vv.c  cput_vv.h  crpt.c  crpt.h  crpt_d.c  crpt_d.h  crpt_dl.c  crpt_dl.h  crpt_l.c  crpt_l.h  evntprc.c  evntprc.h  finprmx.c  finprmx.h  getconc.c  getconc.h  getrisk.c  (+145 more)
src/hazpred/: Makefile  Makefile.am  Makefile.in  addvars.c  addvars.h  alocmem.c  alocmem.h  cntobsh.c  cntobsh.h  cntobsi.c  cntobsi.h  defvars.c  defvars.h  fmtverr.c  fmtverr.h  getflag.c  getflag.h  gethazr.c  gethazr.h  hazpprc.c  hazpprc.h  hazpred  hazpred.c  hazpred.h  hazpred.pcv  hazpred.purify  hazpred_l.c  hazpred_l.l  hazpred_y.c  hazpred_y.h  hazpred_y.y  hazverr.c  hazverr.h  hzd_calc_norinv.c  hzd_calc_norinv.h  hzp_calc_XsX.c  hzp_calc_fn.c  hzp_calc_haz_CL.c  hzp_calc_hazard.c  hzp_calc_hazard.h  (+41 more)
src/libhazp/: Makefile  Makefile.am  Makefile.in  hazpred.h  hzd_calc_norinv.c  hzp_calc_XsX.c  hzp_calc_XsX.h  hzp_calc_fn.c  hzp_calc_fn.h  hzp_calc_haz_CL.c  hzp_calc_haz_CL.h  hzp_calc_hazard.c  hzp_calc_intcp_drv.c  hzp_calc_intcp_subr.c  hzp_calc_intcp_subr.h  hzp_calc_log_fn.c  hzp_calc_parm_drv.c  hzp_calc_scale.c  hzp_calc_srv_CL.c  hzp_calc_srv_CL.h  hzp_calc_survival.c  hzp_calc_survival.h  hzp_init_CL.c  hzp_init_preds.c  hzp_init_preds.h  hzp_pred_time_0.c  hzp_pred_time_0.h  hzp_refmt_cov.c  hzp_refmt_cov.h  hzp_time_parm_drv.c  hzp_time_parm_drv.h  hzpe.c  hzpe.h  hzpi.c  hzpm.c  (+4 more)
(+783 files in other folders)
