# Copyright (C) 2000 The Cleveland Clinic Foundation <hazard@bio.ri.ccf.org>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

docs_DATA = README documentation.html downloads.html examples.html\
	header.css header.html index.html installation.html \
	introduction.html macros.html nav.css navigate.html style.css

# Because the "make dist" target does not include DATA files...
EXTRA_DIST = $(docs_DATA)

SUBDIRS = user_guides

