# Copyright (C) 2000 The Cleveland Clinic Foundation <hazard@bio.ri.ccf.org>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

examples_DATA = README ac.death.AVC.sas bs.death.AVC.sas \
	bs.death.AVC.summary.sas hm.deadp.VALVES.sas \
	hm.death.AVC.deciles.sas hm.death.AVC.sas hm.death.patient.sas \
	hp.death.AVC.hm1.sas hp.death.AVC.hm2.sas hp.death.AVC.sas \
	hp.death.COMPARISON.sas hp.dthip.PAIVS.time.sas hs.death.AVC.hm1.sas \
	hs.dthar.TGA.hs1.sas hs.dthar.TGA.setup.sas hz.deadp.KUL.sas \
	hz.death.AVC.sas hz.te123.OMC.sas hz.tm123.OMC.sas lg.dead30d.AVC.sas \
	lg.deadlate.AVC.sas lg.death.AVC.sas run.all.examples.sh

# Because the "make dist" target does not include DATA files...
EXTRA_DIST = $(examples_DATA)

SUBDIRS = data sasest output


