# Copyright (C) 2000 The Cleveland Clinic Foundation <hazard@bio.ri.ccf.org>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

macros_DATA = README bootstrap.clusters.example.sas bootstrap.clusters.sas\
	bootstrap.doc bootstrap.hazard.sas bootstrap.summary.example.sas \
	bootstrap.summary.sas chisqgf.sas deciles.hazard.sas hazplot.sas \
	kaplan.sas logit.sas logitgr.sas markov.sas markov.test.sas \
	nelsonl.sas nelsont.sas plot.README plot.sas

# Because the "make dist" target does not include DATA files...
EXTRA_DIST = $(macros_DATA)


