# Copyright (C) 2000 The Cleveland Clinic Foundation <hazard@bio.ri.ccf.org>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

docs_userguides_DATA = hazard.doc hazard.html hazard.pdf hazard.ps\
	hazpred.doc hazpred.html hazpred.pdf hazpred.ps\
	overview.doc overview.html overview.pdf overview.ps

# Because the "make dist" target does not include DATA files...
EXTRA_DIST = $(docs_userguides_DATA)

SUBDIRS = hazard_files hazpred_files overview_files


