# Copyright (C) 2000 The Cleveland Clinic Foundation <hazard@bio.ri.ccf.org>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
examples_output_DATA=ac.death.AVC.log ac.death.AVC.lst hm.deadp.VALVES.log \
	hm.deadp.VALVES.lst hm.death.AVC.log hm.death.AVC.lst \
	hm.death.patient.log hp.death.AVC.hm1.log hp.death.AVC.hm1.lst \
	hp.death.AVC.hm2.log hp.death.AVC.hm2.lst hp.death.AVC.log \
	hp.death.AVC.lst hp.death.COMPARISON.log hp.death.COMPARISON.lst \
	hp.dthip.PAIVS.time.log hp.dthip.PAIVS.time.lst hs.death.AVC.hm1.log \
	hs.death.AVC.hm1.lst hs.dthar.TGA.hs1.log hs.dthar.TGA.setup.log \
	hs.dthar.TGA.setup.lst hz.deadp.KUL.log hz.deadp.KUL.lst \
	hz.death.AVC.log hz.death.AVC.lst hz.te123.OMC.log hz.te123.OMC.lst \
	hz.tm123.OMC.log hz.tm123.OMC.lst README 

EXTRA_DIST=$(examples_output_DATA)
