# Copyright (C) 2000 The Cleveland Clinic Foundation <hazard@bio.ri.ccf.org>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

noinst_LIBRARIES = libcommon.a

noinst_HEADERS = hzf_log2.h hzfpag.h hzfxpi.h notspec.h xMISSgot.h xpmode.h \
	xvputd.h hzf_put.h hzfskp.h hzfxpr.h stmtfld.h xexit.h hzdinc.h \
	xvgetd.h xvpute.h hzflg1.h hzfxit.h isblank.h stmtfldname.h \
	xinit.h xvget.h xvputi.h hzf_col.h hzflg2.h hzfxpc.h namfix.h \
	stmtinit.h xlmode.h xvname.h hzf_log1.h hzfmis.h hzfxpf.h notintg.h \
	stmtopts.h xoget.h xvput.h hzf_memget.h structures.h sas.h  \
	hzd_set_Machn.h hzd_set_LnLim.h hzd_init_Common.h hzd_set_rho.h \
	hzd_ln_eX_min1.h hzd_ln_eX_plus1.h dlgaob.h hzd_ln_1min_enegX.h \
	hzd_ln_1min_e_negeX.h hzd_ln_eeX_min1.h hzd_parms_to_theta.h \
	hzd_early_p2t.h hzd_late_p2t.h hzd_Error.h hzd_theta_to_parms.h \
	hzd_early_t2p.h hzd_late_t2p.h hzd_ln_G1_and_SG1_m.h hzd_ln_A_div_B.h \
	hzd_ln_G1_and_SG1.h hzd_ln_G3_and_SG3_m.h hzd_ln_G3_and_SG3.h \
	hzd_ln_eBXmin1divB.h setparm.h setopt.h setvar.h errtext.h yyparse.h \
	yyerror.h common.h

libcommon_a_SOURCES = hzf_log2.c hzfpag.c hzfxpi.c notspec.c xMISSgot.c \
	xpmode.c xvputd.c hzf_put.c hzfskp.c hzfxpr.c stmtfld.c isblank.c \
	xexit.c xvgetd.c xvpute.c hzflg1.c hzfxit.c hzd_ln_A_div_B.c \
	stmtfldname.c xinit.c xvget.c xvputi.c hzf_col.c hzflg2.c hzfxpc.c \
	namfix.c stmtinit.c xlmode.c xvname.c hzf_log1.c hzfmis.c hzfxpf.c \
	notintg.c stmtopts.c xoget.c xvput.c hzf_memget.c hzd_set_Machn.c \
	hzd_set_LnLim.c hzd_init_Common.c hzd_set_rho.c hzd_ln_eX_min1.c \
	hzd_ln_eX_plus1.c dlgaob.c hzd_ln_1min_enegX.c hzd_ln_1min_e_negeX.c \
	hzd_ln_eeX_min1.c hzd_parms_to_theta.c hzd_early_p2t.c hzd_Error.c \
	hzd_late_p2t.c hzd_theta_to_parms.c hzd_early_t2p.c hzd_late_t2p.c \
	hzd_ln_G1_and_SG1_m.c hzd_ln_G1_and_SG1.c hzd_ln_G3_and_SG3_m.c \
	hzd_ln_G3_and_SG3.c hzd_ln_eBXmin1divB.c setparm.c setopt.c setvar.c \
	errtext.c yyerror.c yywrap.c