# Copyright (C) 2000 The Cleveland Clinic Foundation <hazard@bio.ri.ccf.org>
#
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without
# modifications, as long as this notice is preserved.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
AM_CPFLAGS = $(EXTRA_INCLUDES) -I$(top_srcdir)/src/common

noinst_LIBRARIES = libstat.a
noinst_HEADERS = normal.h pdlike.h
libstat_a_SOURCES = normal.c pdlike.c
