# Copyright (C) 2000 The Cleveland Clinic Foundation <hazard@bio.ri.ccf.org>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

example_sasest_DATA = bsavcc.sas7bdat bsavcc.ssd01 bsavce.sas7bdat \
	bsavce.ssd01 bsavcl.sas7bdat bsavcl.ssd01 hmdeadp.ssd01 \
	hmdeath.sas7bdat hmdeath.ssd01 hmdthipr.ssd01 hmdthri1.ssd01 \
	hmpdthe3.ssd01 hzdeath.sas7bdat hzdeath.ssd01   

EXTRA_DIST=$(example_sasest_DATA)

SUBDIRS = ihd
